# pearls

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  config.toml
src/: bindings.cc  bindings.h  ffis.cc  ffis.h  ffs.cc  imgen.rs  main.rs
src/bindings/: cv.cc
src/cv/: ffs.cc  ffs.h
src/imgen/: cmp.rs  color.rs  core.rs  error.rs  math.rs  parser.rs  raw.rs
