[package]
name = "pearls"
version = "0.1.0"
authors = ["Vilhelm Engström <vilhelm.engstrom@tuta.io>"]
edition = "2018"
build = "build.rs"

[profile.release]
opt-level = 3

[build-dependencies]
cc="*"

[dependencies]
cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
num="*"
libc="*"
crossbeam="*"
regex="*"
